--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "express-session": "^1.9.1",
     "gulp": "^3.8.9",
     "gulp-bower": "^0.0.6",
-    "gulp-shell": "^0.2.10",
     "gulp-plumber": "^0.6.6",
+    "gulp-shell": "^0.2.10",
     "gulp-util": "^3.0.1",
     "gulp-watch": "^1.1.0",
     "jade": "^1.7.0",
@@ -27,10 +27,11 @@
     "jquery-ui": "^1.10.5",
     "mongoose": "^3.8.18",
     "request": "^2.46.0",
+    "sanitize-html": "^1.4.3",
     "socket.io": "^1.1.0",
     "socket.io-client": "^1.1.0",
-    "vinyl-source-stream": "^1.0.0",
-    "socket.io-redis": "^0.1.3"
+    "socket.io-redis": "^0.1.3",
+    "vinyl-source-stream": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
